--- a/react-01/index.html
+++ b/react-01/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>react-01</title>
   </head>
-  <body>
+  <body classname="w-screen p-0 m-0">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
